--- a/src/app/components/users/list-user/list-user.component.html
+++ b/src/app/components/users/list-user/list-user.component.html
@@ -10,34 +10,9 @@
                             <button class="pull-right btn btn-warning ml-2" [routerLink]="'/users/create-customer'" >Create customer</button>
                             <button class="pull-right btn btn-warning" >Download</button><br><br>
 
-                        
-                        <!-- <table class="table table-striped table-bordered" >
-                          <thead>
-                            <tr>
-                              <th>Customer #</th>
-                              <th>First name</th>
-                              <th>Last name</th>
-                              <th>Mobile</th>
-                              <th>Email</th>
-                              <th>Created time</th>
-                              <th>Last login</th>
-                            </tr>
-                          </thead>
-                          <tbody *ngFor="let o of filteredCustomers">
-                            <tr [routerLink]="[o.customer_id]">
-                              <td>{{o.customer_id}}</td>
-                              <td>{{o.firstName}}</td>
-                              <td>{{o.lastName}}</td>
-                              <td>{{o.mobile}}</td>
-                              <td>{{o.email}}</td>   
-                              <td>{{o.registeredAt | date:'dd-MMM-yyyy HH:mm'}}</td>  
-                              <td>{{o.lastLogin | date:'dd-MMM-yyyy HH:mm'}}</td>                 
-                            </tr>                          
-                          </tbody>
-                        </table> -->
-
-                        <p-table #dt1 [columns]="cols" styleClass="p-datatable-gridlines" selectionMode="multiple" [(selection)]="selectedOrders" [exportHeader]="'customExportHeader'" [value]="filteredCustomers" [lazy]="false" responsiveLayout="scroll" dataKey="id"                            
-                            [paginator]="true" [showCurrentPageReport]="true" [rowsPerPageOptions]="[30,50,100]" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rows]="30" [totalRecords]="totalRecords" [loading]="loading" [globalFilterFields]="['order_id', 'firstName', 'mobile', 'totalSecurityDeposit', 'grandTotal', 'paymentStatus', 'delivery_status']">
+                                              
+                        <p-table #dt1 [columns]="cols" (onPage)="onPagination($event)" (onSort)="onSort($event)"  (onFilter)="onFilter($event)" styleClass="p-datatable-gridlines" selectionMode="multiple" [(selection)]="selectedOrders" [exportHeader]="'customExportHeader'" [value]="filteredCustomers" [lazy]="false" responsiveLayout="scroll" dataKey="id"                            
+                            [paginator]="true" [showCurrentPageReport]="true" [rowsPerPageOptions]="[30,50,100]" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [first]="first" [rows]="30" [totalRecords]="totalRecords" [loading]="loading" [globalFilterFields]="['customer_id','firstName','lastName','mobile','email','registeredAt','lastLogin']">
                             <ng-template pTemplate="caption">
                               <div class="p-d-flex">
                                 <span class="p-input-icon-left p-ml-auto">
@@ -103,18 +78,11 @@
                                         <th pSortableColumn="lastLogin"><p-sortIcon field="lastLogin"></p-sortIcon></th>
                                     </div>
                                   </th>
-                                    <!-- <th pSortableColumn="order_id">Order Id <p-sortIcon field="order_id"></p-sortIcon></th>
-                                    <th pSortableColumn="createdAt">Order date <p-sortIcon field="createdAt"></p-sortIcon></th>
-                                    <th pSortableColumn="firstName">Customer name <p-sortIcon field="firstName"></p-sortIcon></th>
-                                    <th pSortableColumn="mobile">Mobile <p-sortIcon field="mobile"></p-sortIcon></th>
-                                    <th pSortableColumn="totalSecurityDeposit">Security deposit <p-sortIcon field="totalSecurityDeposit"></p-sortIcon></th>
-                                    <th pSortableColumn="grandTotal">Transaction value <p-sortIcon field="grandTotal"></p-sortIcon></th>
-                                    <th pSortableColumn="paymentStatus">Transaction status <p-sortIcon field="paymentStatus"></p-sortIcon></th>
-                                    <th pSortableColumn="delivery_status">Delivery status <p-sortIcon field="delivery_status"></p-sortIcon></th> -->
+
                                 </tr>
                             </ng-template>
                             <ng-template  pTemplate="body" let-rowData let-o>
-                                <tr [ngClass]="o.status==false ? 'bg-danger text-white':''" [routerLink]="[o.customer_id]">
+                                <tr [ngClass]="[o.status==false ? 'bg-danger text-white':'', o.activeItems ? 'bg-primary text-white':'']" [routerLink]="[o.customer_id]">
                                   <td>{{o.customer_id}}</td>
                                   <td>{{o.firstName}}</td>
                                   <td>{{o.lastName}}</td>
