--- a/src/app/components/users/return-request/return-request.component.html
+++ b/src/app/components/users/return-request/return-request.component.html
@@ -14,7 +14,125 @@
                             (keyup)='updateFilter($event)' />
                             <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br> -->
                      
-                        <table class="table table-striped table-bordered" >
+
+                            <p-table #dt1 [columns]="cols" (onPage)="onPagination($event)" (onSort)="onSort($event)"  (onFilter)="onFilter($event)" styleClass="p-datatable-gridlines" selectionMode="multiple" [(selection)]="selectedOrders" [exportHeader]="'customExportHeader'" [value]="orderitem" [lazy]="false" responsiveLayout="scroll" dataKey="id"                            
+                            [paginator]="true" [showCurrentPageReport]="true" [rowsPerPageOptions]="[30,50,100]" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [first]="first" [rows]="30" [totalRecords]="totalRecords" [loading]="loading" [globalFilterFields]="['customer_id','firstName','lastName','mobile','email','tenure_period']">
+                            <ng-template pTemplate="caption">
+                              <div class="p-d-flex">
+                                <span class="p-input-icon-left p-ml-auto">
+                                          <!-- <i class="pi pi-search"></i> -->
+                                          <input class="w-100" pInputText type="text" (input)="dt1.filterGlobal($event.target.value, 'contains')" placeholder="Search keyword" />
+                                      </span>
+                              </div>
+                              <div class="flex">
+      
+                                <button type="button" pButton pRipple icon="pi pi-file" (click)="dt1.exportCSV()" class="mr-2" pTooltip="CSV" tooltipPosition="bottom">CSV</button>
+                                <button type="button" pButton pRipple icon="pi pi-file-excel"  class="p-button-success mr-2"  pTooltip="XLS" tooltipPosition="bottom">XL</button>
+                                <!-- <button type="button" pButton pRipple icon="pi pi-file-pdf" (click)="exportPdf()" class="p-button-warning mr-2" pTooltip="PDF" tooltipPosition="bottom"></button> -->
+                                <button type="button" pButton pRipple icon="pi pi-filter" (click)="dt1.exportCSV({selectionOnly:true})" class="p-button-info ml-auto" pTooltip="Selection Only" tooltipPosition="bottom">XL</button>
+                              </div>
+                            </ng-template>
+                            <ng-template pTemplate="header">
+                                <tr>
+                                  <th>
+                                    <div class="flex justify-content-center align-items-center">
+                                      Select
+                                    </div>
+                                  </th>
+                                  <th>
+                                    <div class="flex justify-content-center align-items-center">
+                                      Customer Name
+                                        <p-columnFilter type="text" field="firstName" display="menu"></p-columnFilter>
+                                        <th pSortableColumn="firstName"><p-sortIcon field="firstName"></p-sortIcon></th>
+                                    </div>
+                                  </th>
+                                  <th>
+                                    <div class="flex justify-content-center align-items-center">
+                                      Mobile
+                                        <p-columnFilter type="numeric" field="mobile" display="menu"></p-columnFilter>
+                                    </div>
+                                  </th>
+                                  <th>
+                                    <div class="flex justify-content-center align-items-center">
+                                      Product name
+                                        <p-columnFilter type="text" field="prod_name" display="menu"></p-columnFilter>
+                                    </div>
+                                  </th>
+                                  <th>
+                                    <div class="flex justify-content-center align-items-center">
+                                      Tenure period
+                                        <p-columnFilter type="text" field="tenure_period" display="menu"></p-columnFilter>
+                                    </div>
+                                  </th>
+                                  <th>
+                                    <div class="flex justify-content-center align-items-center">
+                                      Asset#
+                                        <p-columnFilter type="text" field="asset_id" display="menu"></p-columnFilter>
+                                    </div>
+                                  </th>
+                                  <th>
+                                    <div class="flex justify-content-center align-items-center">
+                                      Start date
+                                        <p-columnFilter type="date" field="startDate" display="menu"></p-columnFilter>
+                                        <th pSortableColumn="startDate"><p-sortIcon field="startDate"></p-sortIcon></th>
+                                    </div>
+                                  </th>
+                                  <th>
+                                    <div class="flex justify-content-center align-items-center">
+                                      Pickup date
+                                        <p-columnFilter type="date" field="requested_date" display="menu"></p-columnFilter>
+                                        <th pSortableColumn="requested_date"><p-sortIcon field="requested_date"></p-sortIcon></th>
+                                    </div>
+                                  </th>
+                                  
+      
+                                  <th>
+                                    <div class="flex justify-content-center align-items-center">
+                                      Approval status
+                                      <p-columnFilter field="approval_statusText" matchMode="in" display="menu" [showMatchModes]="false"
+                                        [showOperator]="false" [showAddButton]="false">
+                                        <ng-template pTemplate="header">
+                                          <div class="p-px-3 p-pt-3 p-pb-0">
+                                            <span class="p-text-bold">Status Picker</span>
+                                          </div>
+                                        </ng-template>
+                                        <ng-template pTemplate="filter" let-value let-filter="filterCallback">
+                                          <p-multiSelect [ngModel]="value" [options]="approvals" placeholder="Any"
+                                            (onChange)="filter($event.value)" optionLabel="name">
+                                            <ng-template let-option pTemplate="item">
+                                              <div class="p-multiselect-representative-option">
+                                                <span class="p-ml-1">{{option.name}}</span>
+                                              </div>
+                                            </ng-template>
+                                          </p-multiSelect>
+                                        </ng-template>
+                                      </p-columnFilter>                                   
+                                    </div>
+                                  </th>
+      
+      
+                                </tr>
+                            </ng-template>
+                            <ng-template  pTemplate="body" let-rowData let-o>                        
+                              <tr *ngIf="o.request_id==2">
+                                <td><input type="checkbox" *ngIf="o.request_status==1" (click)="productsToReturn($event, o)"></td>
+                                <td [routerLink]="['../customers',o.customer_id]">{{o.firstName}}</td>
+                                <td [routerLink]="['../customers',o.customer_id]">{{o.mobile}}</td>
+                                <td>{{o.prod_name.substring(0,50)+'...'}}</td>
+                                <td>{{o.tenure_period}}</td>
+                                <td>{{o.asset_id}}</td>
+                                <td>{{o.startDate | date:'dd MMM yyyy HH:mm'}}</td>
+                                <td>{{o.requested_date | date:'dd MMM yyyy HH:mm'}}</td>
+                                <td>
+                                  <span *ngIf="o.approval_statusText.name=='Requested'"><i class="fa fa-circle text-warning"></i> Requested</span>
+                              <span *ngIf="o.approval_statusText.name=='Rejected'"><i class="fa fa-circle text-danger"></i> Rejected</span>
+                              <span *ngIf="o.approval_statusText.name=='Approved'"><i class="fa fa-circle text-success"></i> Approved</span>
+                                </td>
+                               
+                              </tr>  
+                            </ng-template>
+                          </p-table>
+                        <!-- <table class="table table-striped table-bordered" >
                           <thead>
                             <tr>
                               <th>Select</th>
@@ -43,10 +161,10 @@
                                 <span *ngIf="o.approval_status==0 && o.request_status==0"><i class="fa fa-circle text-danger"></i> Rejected</span>
                                 <span *ngIf="o.approval_status==1 && o.request_status==0"><i class="fa fa-circle text-success"></i> Approved</span>
                               </td>
-                              <!-- <td *ngIf="o.request_status==1" (click)="returnProductOrderById(o.order_id, o.order_item_id,o,o.asset_id,o); toggleReplaceDetails=!toggleReplaceDetails"><a><i class="fa fa-pencil"></i></a></td>                    -->
+                              
                             </tr>                          
                           </tbody>
-                        </table>
+                        </table> -->
                     </div>
                 </div>
             </div>
